{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 106,
  "lineage": "c262eb6c-924c-f30f-9447-d783b3945927",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-062c305470f4a1ba0",
            "domain": "vpc",
            "id": "eipalloc-04ba44894c297e6f6",
            "instance": "i-08aa4296c3f0d1897",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0254828fd212f178a",
            "private_dns": "ip-10-0-1-50.eu-west-3.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-13-37-130-37.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.37.130.37",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow-web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f7cd40eac2214b37",
            "arn": "arn:aws:ec2:eu-west-3:404849952244:instance/i-08aa4296c3f0d1897",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08aa4296c3f0d1897",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "chukaKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0254828fd212f178a"
              }
            ],
            "primary_network_interface_id": "eni-0254828fd212f178a",
            "private_dns": "ip-10-0-1-50.eu-west-3.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "13.37.130.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc517aa415c62e5f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce66a8a93428d011",
            "tags": {
              "Name": "web-server-1"
            },
            "tags_all": {
              "Name": "web-server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00f37e79241bf69bc"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc",
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow-web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:404849952244:internet-gateway/igw-0c84bc9fff149ff0d",
            "id": "igw-0c84bc9fff149ff0d",
            "owner_id": "404849952244",
            "tags": {
              "Name": "prod-gw"
            },
            "tags_all": {
              "Name": "prod-gw"
            },
            "vpc_id": "vpc-0edb758c4fdb90763"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0a41f2b9e7066a21f",
                "device_index": 0,
                "instance": "i-08aa4296c3f0d1897"
              }
            ],
            "id": "eni-0254828fd212f178a",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:c9:27:47:13:8e",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-00f37e79241bf69bc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce66a8a93428d011"
          },
          "dependencies": [
            "aws_vpc.prod-vpc",
            "aws_security_group.allow-web",
            "aws_subnet.subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:404849952244:route-table/rtb-09d77acf0e92e85ee",
            "id": "rtb-09d77acf0e92e85ee",
            "owner_id": "404849952244",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c84bc9fff149ff0d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "store"
            },
            "tags_all": {
              "Name": "store"
            },
            "vpc_id": "vpc-0edb758c4fdb90763"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abe1c1d02ab9a761",
            "route_table_id": "rtb-09d77acf0e92e85ee",
            "subnet_id": "subnet-0ce66a8a93428d011"
          },
          "dependencies": [
            "aws_vpc.prod-vpc",
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:404849952244:security-group/sg-00f37e79241bf69bc",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f37e79241bf69bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "404849952244",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-web"
            },
            "tags_all": {
              "Name": "allow-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edb758c4fdb90763"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:404849952244:subnet/subnet-0ce66a8a93428d011",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ce66a8a93428d011",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404849952244",
            "tags": {
              "Name": "prod subnet"
            },
            "tags_all": {
              "Name": "prod subnet"
            },
            "vpc_id": "vpc-0edb758c4fdb90763"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:404849952244:vpc/vpc-0edb758c4fdb90763",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0da5d9263573ce4c3",
            "default_route_table_id": "rtb-0c512ec781fd6fdf7",
            "default_security_group_id": "sg-07375aea9fe6553d9",
            "dhcp_options_id": "dopt-692af601",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0edb758c4fdb90763",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c512ec781fd6fdf7",
            "owner_id": "404849952244",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}